--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^1.10.2",
     "react-native-safe-area-context": "^3.1.3",
     "react-native-screens": "^2.10.1",
     "react-native-super-grid": "^4.0.3",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-video": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
